--- a/client/app/views/sections/latest_stories.html.haml
+++ b/client/app/views/sections/latest_stories.html.haml
@@ -2,8 +2,9 @@
 -no_content_row
 -unless @section.description.nil?
   .row
-    %p.section_description
-      =@section.description
+    #section_description.twelvecol 
+      %p.section_description
+        =@section.description
 #blog_like_news_view.row
   -@pages_sections.each_with_col_name do |page_section, col_name|
     .blog_like_news{:class => "item_#{col_name}"}
