--- a/client/app/views/pages/form_tabs/_snippets.html.haml
+++ b/client/app/views/pages/form_tabs/_snippets.html.haml
@@ -1,6 +1,6 @@
 -semantic_fields_for page do |fields|
   -fields.inputs do
-    =fields.input :intro, :as => :ck_text, :label => 'Page intro', :input_html => {:height => 100} 
+    =fields.input :snippet_summary, :as => :ck_text, :label => 'Summary', :input_html => {:height => 100}
     =fields.input :snippet_photo_caption, :as => :ck_text, :label => 'Photo caption', :input_html => {:height => 100}
     =fields.input :snippet_pull_quote, :as => :ck_text, :label => 'Pull quote', :input_html => {:height => 100}
     =fields.input :snippet_call_to_action, :as => :ck_text, :label => 'Call to action', :input_html => {:height => 100}
