--- a/client/app/views/layouts/_header.html.haml
+++ b/client/app/views/layouts/_header.html.haml
@@ -18,8 +18,7 @@
           =link_if_allowed('Admin', admin_proc)
           
     -else
-      %a{ :href => "#login_popup", :id=>'login_link', :class=>'button' }
-        Log in
+      =link_to "Login", "#login_popup", :id=>'login_link', :class=>"button"
       =link_to("Signup", new_member_path, :class => 'button')
 
     -if logged_in?
