updated the look and feel to appear similar to current site

--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -16,10 +16,10 @@
   #big_message    
     #big_message_left.fourcol
       %h2
-        We are an online community that inspires people to lead a greener life.
+        Small moments can make a big difference – they can lift us up and make us feel good about the world.
       %p
-        With the help of brilliant videos and inspiring stories from creative people and community members around the world. Join people from 205 countries doing their green things and making a difference. 
-        = link_to 'More about us here', {:controller => 'page', :action => 'show', :id => '2'}, :class => 'read_more'
+        Seeing a beautiful picture, hearing someone sing a song, reading a favourite poem or just eating a delicious handmade cupcake. Here at ‘spots of time’ we want to multiply these great little moments. 
+        =# link_to 'More about us here', {:controller => 'page', :action => 'show', :id => '2'}, :class => 'read_more'
     #big_message_image.eightcol.last
       =image_tag 'photo.jpg'
   #home_info_1.fourcol
