--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -10,17 +10,16 @@
 
 /* Add google web fonts here- take away if not needed */
 @import url('http://fonts.googleapis.com/css?family=Merriweather:light,regular,bold,900');
-@import url('http://fonts.googleapis.com/css?family=Pacifico');
-
+@import url('http://fonts.googleapis.com/css?family=Droid+Sans:400,700&v2');
 /* ===============================  Reset styles ================================ */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
 
 /* ===============================  text styles ================================ */
-body, textarea, input {font:12px/1.6 'Helvetica', Arial,'Liberation Sans',FreeSans,sans-serif}a:focus{outline:1px dotted invert}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:disc}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:13px}
+body, textarea, input {font:12px/1.6 'droid sans', Arial,'Liberation Sans',FreeSans,sans-serif}a:focus{outline:1px dotted invert}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:disc}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:13px}
 
 /* ======================  CSS3 regularly used stuff ================== */
 
-#main, input, #footer_links, .bx_h, #news_feed_older_btn, .bx_h a, button, .bttn, .pull_quote, div#page_related_col, a.backto, #nav ul li a, .logged_in_box, .homepage_link, .pagination a, .pagination span {
+#main, input, #footer_links, .bx_h, #news_feed_older_btn, .bx_h a, button, .bttn, .pull_quote, div#page_related_col, a.backto, .logged_in_box, .homepage_link, .pagination a, .pagination span {
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
 	border-radius:3px;
@@ -28,7 +27,7 @@ body, textarea, input {font:12px/1.6 'Helvetica', Arial,'Liberation Sans',FreeSa
 	
 }
 a, p.inline-errors, .formError {
-	color:#5fcec8;
+	color:#32DBA1;
 
 }
 body span.cal_sheet span.month {
@@ -1094,7 +1093,7 @@ div#top {
 	width:100%;
 }
 #header {
-	
+	border-top: 5px solid #000;
 }
 #subheader.container {
 
@@ -1329,6 +1328,7 @@ fb.fb_login_not_logged_in.FB_login_button {
 	color: #666;
 	font-size: 12px;
 	border: 1px solid #ccc;
+	background: #f5f5f5;
 	
 	    -webkit-box-shadow:inset 1px 1px 3px #f5f5f5;
 	-moz-box-shadow:inset 1px 1px 3px #f5f5f5;
@@ -1377,6 +1377,8 @@ input#search_icon {
 	-moz-border-radius:4px;
 	
 	padding: 0;
+	
+	margin: 10px 0 0;
 
 }
 
@@ -1403,7 +1405,7 @@ input#search_icon {
 	margin:0;
 	padding:0;
 	text-indent:0;
-		font-size: 20px;
+	font-size: 20px;
 	line-height: 20px;
 	width: 100%;
 }
@@ -1420,14 +1422,14 @@ input#search_icon {
 }
 #nav a {
 	display:block;
-	font-size: 14px;
+	font-size: 12px;
 	line-height: 100%;
-	color: #000;
-
-
+	color: #666;
 	float:left;
 	margin:0px 0px 0 0;
-	padding:10px 30px 10px 0;
+	padding:10px 20px 10px;
+	font-family: droid sans, arial;
+	text-transform: uppercase;
 
 }
 #nav a:hover {
@@ -1442,6 +1444,7 @@ input#search_icon {
 #nav li.active a, #subnav li.active a, .controller_home #nav_link_1 a, .section_1 #nav_link_2 a   {
   text-decoration:none;
   font-weight: bold;
+  background: #f1f1f1;
 }
 
 #page_subnav ul li.active a {
@@ -1506,6 +1509,9 @@ div.home_bx .bx_h, div.home_bx .bx_in {
 	float: left;
 	margin: 0 0 20px;
 }
+#big_message h2 {
+	line-height: 140%;
+}
 
 div.home_bx {
 	clear:none;
@@ -1522,11 +1528,16 @@ div.home_bx {
 	background: #000;
 	font-size: 18px;
 	
+	-moz-border-radius:40px;
+	-webkit-border-radius:40px;
+	border-radius:40px;
+	-o-border-radius:40px;
+	
 }
 
 #homepage_call_to_action {
-	background: #5fcece;
-	color: #fff;
+	background: #8dfbd5;
+	color: #000;
 }
 
 div.home_bx .bx_h, div.home_bx .bx_in {
