--- a/client/app/views/admin/index.html.haml
+++ b/client/app/views/admin/index.html.haml
@@ -24,7 +24,7 @@
         Activities
       %ul
         %li=link_to("List activities", activities_path)
-        %li=link_to("Add an activity", new_activity_path)         
+        %li=link_to("Add an activity", new_activity_path)
     #dash_images.dash_item
       .dash_icon
       %h3
@@ -68,3 +68,10 @@
             Members report
         %li
           =link_to 'New member', new_member_path
+    #dash_organisations.dash_item
+      .dash_icon
+      %h3
+        Organisations
+      %ul
+        %li=link_to("List organisations", organisations_path)
+        %li=link_to("New organisation", new_organisation_path)
